fix horizontal scroll

--- a/css/prism.less
+++ b/css/prism.less
@@ -36,7 +36,7 @@ html.prism-pretty {
     }
 
     .pretty-container {
-        min-height: 100%;
+        min-height: 100vh;
     }
 
     .pretty-size-13px {
@@ -189,13 +189,13 @@ html.prism-pretty {
     pre[class*="language-"] {
         position: relative;
         margin: 0;
-        overflow: auto;
+        // overflow: hidden;
         padding-left: 3.8em;
         counter-reset: linenumber;
         white-space: pre;
         word-wrap: normal;
         counter-reset: linenumber;
-        &:before {
+        /*&:before {
             position: absolute;
             top: 0;
             left: 0;
@@ -207,7 +207,7 @@ html.prism-pretty {
             font: bold 15px/1 sans-serif;
             color: white;
             text-indent: 1em;
-        }
+        }*/
     }
     .line-numbers-rows {
         display: flex;
